# webhook-event-processor

./: LICENSE  README.md  pyproject.toml
realmate_challenge/: settings.py  urls.py
realmate_challenge/conversation/: apps.py  factory.py  mapper.py  urls.py
realmate_challenge/conversation/dtos/: webhook_dto.py
realmate_challenge/conversation/entities/: conversation.py  conversation_entity.py  enuns.py  message.py  message_entity.py
realmate_challenge/conversation/factories/: conversation_factory.py
realmate_challenge/conversation/migrations/: 0001_initial.py
realmate_challenge/conversation/models/: conversation.py  message.py
realmate_challenge/conversation/repositories/: conversation_repository.py  message_repository.py
realmate_challenge/conversation/serializers/: webhook_receiver.py
realmate_challenge/conversation/use_cases/: close_conversation.py  create_conversation.py  create_message.py  webhook_event_handler.py
realmate_challenge/conversation/views/: webhook_receiver.py
realmate_challenge/shared/: enum.py  exception.py  exception_handler.py  global_exception_handler.py  pagination.py  parse.py  repository.py  schema_exceptions.py
realmate_challenge/webhook_api/: apps.py  exceptions.py  factory.py  mapper.py  urls.py
realmate_challenge/webhook_api/dtos/: webhook_dto.py
realmate_challenge/webhook_api/entities/: conversation_entity.py  message_entity.py
realmate_challenge/webhook_api/migrations/: 0001_initial.py
realmate_challenge/webhook_api/models/: conversation.py  message.py
realmate_challenge/webhook_api/repositories/: conversation_repository.py  message_repository.py
(+27 files in other folders)
